; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/extr_revs-txns.c_get_txn.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/extr_revs-txns.c_get_txn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@transaction_kind_dead = common dso_local global i64 0, align 8
@SVN_ERR_FS_TRANSACTION_NOT_DEAD = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"Transaction is not dead: '%s'\00", align 1
@SVN_ERR_FS_TRANSACTION_DEAD = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [26 x i8] c"Transaction is dead: '%s'\00", align 1
@SVN_NO_ERROR = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (%struct.TYPE_4__**, i32*, i8*, i64, i32*, i32*)* @get_txn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @get_txn(%struct.TYPE_4__** %0, i32* %1, i8* %2, i64 %3, i32* %4, i32* %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_4__**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca %struct.TYPE_4__*, align 8
  store %struct.TYPE_4__** %0, %struct.TYPE_4__*** %8, align 8
  store i32* %1, i32** %9, align 8
  store i8* %2, i8** %10, align 8
  store i64 %3, i64* %11, align 8
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  %15 = load i32*, i32** %9, align 8
  %16 = load i8*, i8** %10, align 8
  %17 = load i32*, i32** %12, align 8
  %18 = load i32*, i32** %13, align 8
  %19 = call i32 @svn_fs_bdb__get_txn(%struct.TYPE_4__** %14, i32* %15, i8* %16, i32* %17, i32* %18)
  %20 = call i32 @SVN_ERR(i32 %19)
  %21 = load i64, i64* %11, align 8
  %22 = icmp ne i64 %21, 0
  br i1 %22, label %23, label %34

23:                                               ; preds = %6
  %24 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %25 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = load i64, i64* @transaction_kind_dead, align 8
  %28 = icmp ne i64 %26, %27
  br i1 %28, label %29, label %34

29:                                               ; preds = %23
  %30 = load i32, i32* @SVN_ERR_FS_TRANSACTION_NOT_DEAD, align 4
  %31 = call i32 @_(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %32 = load i8*, i8** %10, align 8
  %33 = call i32* @svn_error_createf(i32 %30, i32 0, i32 %31, i8* %32)
  store i32* %33, i32** %7, align 8
  br label %52

34:                                               ; preds = %23, %6
  %35 = load i64, i64* %11, align 8
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %48, label %37

37:                                               ; preds = %34
  %38 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %39 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %38, i32 0, i32 0
  %40 = load i64, i64* %39, align 8
  %41 = load i64, i64* @transaction_kind_dead, align 8
  %42 = icmp eq i64 %40, %41
  br i1 %42, label %43, label %48

43:                                               ; preds = %37
  %44 = load i32, i32* @SVN_ERR_FS_TRANSACTION_DEAD, align 4
  %45 = call i32 @_(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.1, i64 0, i64 0))
  %46 = load i8*, i8** %10, align 8
  %47 = call i32* @svn_error_createf(i32 %44, i32 0, i32 %45, i8* %46)
  store i32* %47, i32** %7, align 8
  br label %52

48:                                               ; preds = %37, %34
  %49 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %50 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %8, align 8
  store %struct.TYPE_4__* %49, %struct.TYPE_4__** %50, align 8
  %51 = load i32*, i32** @SVN_NO_ERROR, align 8
  store i32* %51, i32** %7, align 8
  br label %52

52:                                               ; preds = %48, %43, %29
  %53 = load i32*, i32** %7, align 8
  ret i32* %53
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_fs_bdb__get_txn(%struct.TYPE_4__**, i32*, i8*, i32*, i32*) #1

declare dso_local i32* @svn_error_createf(i32, i32, i32, i8*) #1

declare dso_local i32 @_(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
